@@ -1,25 +1,49 @@
 <objects>
   <object type="MonoDevelop.SourceEditor.SourceEditorWidget" allow-children="false" base-type="Gtk.Bin" palette-category="MonoDevelop.SourceEditor2">
     <itemgroups>
+      <itemgroup label="SourceEditorWidget Properties">
+        <property name="IsClassBrowserVisible" />
+      </itemgroup>
     </itemgroups>
     <signals />
   </object>
   <object type="MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel" palette-category="MonoDevelop.SourceEditor2" allow-children="false" base-type="Gtk.Bin">
     <itemgroups>
+      <itemgroup label="GeneralOptionsPanel Properties">
+        <property name="EnableFinish" />
+      </itemgroup>
     </itemgroups>
     <signals>
+      <itemgroup label="GeneralOptionsPanel Signals">
+        <signal name="CustomizationObjectChanged" />
+        <signal name="EnableFinishChanged" />
+      </itemgroup>
     </signals>
   </object>
   <object type="MonoDevelop.SourceEditor.OptionPanels.HighlightingPanel" palette-category="MonoDevelop.SourceEditor2" allow-children="false" base-type="Gtk.Bin">
     <itemgroups>
+      <itemgroup label="HighlightingPanel Properties">
+        <property name="EnableFinish" />
+      </itemgroup>
     </itemgroups>
     <signals>
+      <itemgroup label="HighlightingPanel Signals">
+        <signal name="CustomizationObjectChanged" />
+        <signal name="EnableFinishChanged" />
+      </itemgroup>
     </signals>
   </object>
   <object type="MonoDevelop.SourceEditor.OptionPanels.MarkerPanel" palette-category="MonoDevelop.SourceEditor2" allow-children="false" base-type="Gtk.Bin">
     <itemgroups>
+      <itemgroup label="MarkerPanel Properties">
+        <property name="EnableFinish" />
+      </itemgroup>
     </itemgroups>
     <signals>
+      <itemgroup label="MarkerPanel Signals">
+        <signal name="CustomizationObjectChanged" />
+        <signal name="EnableFinishChanged" />
+      </itemgroup>
     </signals>
   </object>
 </objects>
